--- a/17 Latihan Html CSS/Lesson3.html
+++ b/17 Latihan Html CSS/Lesson3.html
@@ -3,156 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aditya Saputra </title>
+    <link rel="stylesheet" href="style3.css">
 </head>
 <body>
     <font face="Arial">
-    <h1><u> Lesson 3 Exercies - Hovers, Transition Shadow</u></h1>
+    <h1><u>Lesson 3 Exercises - Hovers, Transitions, Shadows</u></h1>
     </font>
 
-    <h3>CSS 3a</h3>
-    <style>
-        .SOALa {
-            background-color: black;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-        }
-        .SOALa:hover {
-            
-        }
-    </style>
-    <button class="SOALa">Request now</button>
+    <br>
 
-    <h3>CSS 3b</h3>
-    <style>
-        .SOALb {
-            background-color:rgb(255, 216,20);
-            border: none;
-            padding: 11px 45px;
-            border-radius: 18px;
-            cursor: pointer;
-        }
-        .SOALb:hover {
-            background-color: rgb(253, 223, 77);
-        }
-    </style>
-    <button class="SOALb">Add to Cart</button>
+    <h3>3a. Uber </h3>
+    <button class="css3a">Request Now</button>
 
-    <h3>CSS 3c</h3>
-    <style>
-        .SOALc {
-            background-color:rgb(46, 164, 79) ;
-            color: white;
-            border: none;
-            padding: 11px 23px;
-            border-radius: 5px;
-        }
-        .SOALc:hover {
-            box-shadow: 2px 2px 5px black;
-            cursor: pointer;
-            background-color: rgb(69, 182, 101);
-        }
-    </style>
-    <button class="SOALc">Sign up</button>
+    <br>
 
-    <h3>CSS 3d</h3>
-    <style>
-        .SOALd {
-            background-color:rgb(121, 82, 179) ;
-            color: white;
-            border: none;
-            padding: 12px 20px;
-            border-radius: 5px;
-        }
-        .SOALd:hover {
-            background-color: rgb(65, 40, 102);
-            cursor: pointer;
-        }
-    </style>
-    <style>
-        .SOALdd {
-            background-color:white ;
-            color:rgb(108, 117, 125) ;
-            padding: 11px 20px;
-            border: 1px solid;
-            border-radius: 5px;
-        }
-        .SOALdd:hover {
-            background-color: rgb(108, 117, 125);
-            cursor: pointer;
-            color: white;
-        }
-    </style>
-    <button class="SOALd"><b>Get started</b></button>
-    <button class="SOALdd"><b>Download</b></button>
+    <h3>3b. Amazon </h3>
+    <button class="css3b">Add to Cart</button>
 
-    <h3>CSS 3e</h3>
-    <style>
-        .SOALe {
-            background-color:rgb(10, 102, 194);
-            color: white;
-            padding: 8px 20px;
-            border: none;
-            border-radius: 20px;
-        }
-        .SOALe:hover {
-            background-color: rgb(11, 46, 81);
-            cursor: pointer;
-        }   
-    </style>
-    <style>
-        .SOALee {
-            background-color: white;
-            color:rgb(10, 102, 194);
-            border: 1px solid;
-            padding: 7px 12px;
-            border-radius: 22px;
-        }
-        .SOALee:hover {
-            background-color: rgb(189, 210, 232);
-            border: 3px solid;
-        }
-    </style>
-    <button class="SOALe"><b>Apply on company website</b></button>
-    <button class="SOALee"><b>Save</b></button>
+    <br>
 
-    <h3>CSS 3f</h3>
-  <style>
-    .add-to-cart {
-      background-color: rgb(255, 216, 20);
-      border: none;
-      padding: 7px 20px;
-      border-radius: 20px;
-      cursor: pointer;
-    }
-    .add-to-cart:hover {
-      background-color: rgb(220, 195, 66);
-    }
-    .add-to-cart:active {
-      background-color: rgb(245, 194, 118);
-    }
-    .buy-now {
-      background-color: rgb(255, 164, 28);
-      border: none;
-      padding: 7px 30px;
-      border-radius: 20px;
-      cursor: pointer;
-    }
-    .buy-now:hover {
-      background-color: rgb(224, 109, 22);
-    }
-    .buy-now:active {
-      background-color: rgb(245, 194, 118);
-    }
-    link {
-      color:rgb(0, 113, 133);;
-    }
-    .link:hover {
-      color: red;
-    }
-  </style>
-  <a class="link" href="https://www.amazon.com/" target="_blank" >Back to Amazon</a>
+    <h3>3c. Github </h3>
+    <button class="css3c">Sign Up</button>
+
+    <br>
+
+    <h3>3d. Bootstrap </h3>
+    <button class="css3d">Get started</button>
+    <button class="css33d">Download</button>
+
+    <br>
+
+    <h3>3e. Linkedln</h3>
+    <button class="css3e">Apply on company website</button>
+    <button class="css33e">Save</button>
+
+    <br>
+
+    <h3>3f. </h3>
+  <a href="https://www.amazon.com/" target="_blank" style="color: rgb(0, 113, 133);">Back to Amazon</a>
 
   <h2>Nike Black Running Shoes</h2>
 
@@ -160,7 +49,7 @@
 
   <p>Free delivery tomorrow</p>
 
-  <button class="add-to-cart">Add to Cart</button>
-  <button class="buy-now">Buy now</button>
+  <button class="css3f">Add to Cart</button>
+  <button class="css33f">Buy now</button>
 </body>
 </html>
