--- a/17 Latihan Html CSS/Lesson3.html
+++ b/17 Latihan Html CSS/Lesson3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aditya Saputra </title>
+    <title>Lesson 3</title>
     <link rel="stylesheet" href="style3.css">
 </head>
 <body>
