--- a/17 Latihan Html CSS/Lesson11.html
+++ b/17 Latihan Html CSS/Lesson11.html
@@ -6,11 +6,16 @@
   <title>Document</title>
 </head>
 <body>
+  <h1>
+    <u>
+      Lesson 11
+    </u>
+  </h1>
   <style>
     .text {
       display: grid;
       justify-content: center;
-      grid-template-columns: 200px 75px;
+      grid-template-columns: 50px 200px 75px;
     }
     .colom1 {
       border: none;
@@ -20,10 +25,29 @@
       border: none;
       background-color: pink;
     }
+    .colom3 {
+      border: none;
+      background-color: skyblue;
+    }
   </style>
+<div>
 <div class="text">
 <div class="colom1">200px</div>
 <div class="colom2">75px</div>
 </div>
 </body>
+<br>
+
+<div>
+  <div class="text">
+  <div class="colom3">col1</div>
+  <div class="colom2">col2</div>
+  <div class="colom1">col3</div>
+</div>
+<br>
+
+<style>
+  
+  
+</style>
 </html>
