--- a/17 Latihan Html CSS/Lesson6.html
+++ b/17 Latihan Html CSS/Lesson6.html
@@ -10,6 +10,7 @@
     <font face="Arial">
         <h1><u>Lesson 6 Exercises - The HTML Structure</u></h1>
     </font>
+    <font face="Montserrat">
     <h3>CSS 6d</h3>
     <table border="0" style="text-align: center;">
         <tr>
@@ -17,7 +18,9 @@
                 <p>Order Online for <u>Touchless Delivery</u></p>
             </td>
         </tr>
-    </table>
+    </table> 
+    </font>
+
 
 </body>
 </html>
