--- a/17 Latihan Html CSS/Lesson7.html
+++ b/17 Latihan Html CSS/Lesson7.html
@@ -90,7 +90,7 @@
         border-radius: 20px;
     }
   </style>
-    <img style="vertical-align: middle;" class="gabungan-image" src="7.jpg" alt="" width="100px">
+    <img style="vertical-align: middle;" class="gabungan-image" src="7.jpg" width="100px">
     <input class="cssg" type="text" placeholder="What's Happening?">
     <button class="cssggg">Tweet</button>
     </div>
