--- a/17 Latihan Html CSS/Lesson9.html
+++ b/17 Latihan Html CSS/Lesson9.html
@@ -4,28 +4,257 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style9.css">
+  <link rel="stylesheet" href="style7.css">
 </head>
-<h1>
-  <u>
-    <font face="arial"> Lesson 9 Exercises - The div Element</font>
-  </u>
-</h1>
 <body>
+<font face="Arial">  <h1>
+    <u>
+      Lesson 9 Exercises - The div Element
+    </u>
+  </h1>
+</font>
+
 <h3> 9a </h3>
-  <div class="box-red"></div>
-<br>
+<div class="red">
+  <style>
+    .red {
+      width: 50px;
+      height: 50px;
+      background-color: red;
+    }
+  </style>
+</div>
+
 <h3> 9b </h3>
-  <div class="circle-green"></div>
+<div class="green">
+  <style>
+    .green {
+      width: 50px;
+      height: 50px;
+      border-radius: 50px;
+      background-color: green;
+    }
+  </style>
+</div>
+
 <h3> 9c </h3>
-  <div class="yes-no">
-    Satisfied with our service
-     <br> <br>
-    <button> Yes </button> 
-    <button> No </button>
-  </div>
+<div class="yes-no">
+  <p>
+    <td>
+      Satisified with our service?
+    </td>
+  </p>
+  <button> yes </button>
+  <button> no </button>
+  <style>
+    .yes-no {
+      width: 250px;
+      height: 80px;
+      border: none;
+      padding: 10px 20px ;
+      box-shadow: 0 0 6px rgb(0, 0, 0, 0.5);
+    }
+  </style>
+</div>
+
 <h3> 9d </h3>
 <div class="youtube">
+  <style>
+    .youtube {
+      width: 400px;
+      height: 100px;
+      border: none;
+      padding: 10px 20px ;
+      box-shadow: 0 0 6px rgb(0, 0, 0, 0.5);
+      background-color: rgb(32, 31, 31);
+      color: white;
+      font-family: 'arial';
+      font-size: small;
+    }
+  </style>
+  <h2 class="1"> Install Youtube Music</h2>
+  <span class="p"> Add YouTube Music to your dekstop for quick and <br>
+  easy access</span>
 </div>
+
+<h3> 9e </h3>
+  <style>
+    .what {
+        padding: 9px 20px;
+        width: 255px;
+        border: none;
+    }
+    .tweet {
+        background-color: rgb(10, 102, 194);
+        color: white;
+        padding: 8px 20px;
+        border: none;
+        border-radius: 20px;
+    }
+    .border {
+      width: 500px;
+      height: 100px;
+      border: none;
+      padding: 10px ;
+      box-shadow: 0 0 6px rgb(0, 0, 0, 0.5);
+      background-color: rgb(255, 255, 255);
+      color: white;
+    }
+  </style>
+  <div class="border">
+  <img style="vertical-align: middle;" class="gabungan-image" src="7.jpg" width="100px">
+  <input type="text" class="what" placeholder="What's happening?">
+  <button class="tweet">Tweet</button>
+  </div>
+
+  <h3> 9f </h3>
+  <div class="design">
+    <style>
+      .design {
+      padding: 20px 10px ;
+      height: 20px 30px;
+      width: 150px ;
+      box-shadow: 0 0 6px rgb(0, 0, 0, 0.5);
+      }
+      .add {
+        background-color: rgb(0, 12, 121);
+        color: white;
+        border: none;
+        padding: 10px 25px;
+      }
+      .friends {
+        font-size: small;
+        color: rgb(54, 52, 52);
+      }
+    </style>
+    <img style="vertical-align: middle;" src="7.jpg" width="150px">
+    <font face="arial">    <td>
+      <br> <br>
+    </td>
+    <span> <b>Ditto </b> </span>
+    <td> 
+      <br> 
+    </td>
+    <span class="friends"> 2 mutual friends </span>
+    <br>
+    <td>
+    </font>
+
+      <br>
+      <button class="add"> Add Friend </button>
+    </td>
+  </div>
+
+  <h3> 9g </h3>
+  <div class="design">
+    <style>
+      .design {
+      padding: 20px 10px ;
+      height: 20px 30px;
+      width: 150px ;
+      box-shadow: 0 0 6px rgb(0, 0, 0, 0.5);
+      }
+      .add {
+        background-color: rgb(0, 12, 121);
+        color: white;
+        border: none;
+        padding: 10px 25px;
+      }
+      .friends {
+        font-size: small;
+        color: rgb(54, 52, 52);
+      }
+    </style>
+    <img style="vertical-align: middle;" src="1.jpg" width="150px">
+    <font face="arial">    <td>
+      <br> <br>
+    </td>
+    <span> <b>Windah</b> </span>
+    <td> 
+      <br> 
+    </td>
+    <span class="friends"> 2 mutual friends </span>
+    <br>
+    <td>
+    </font>
+
+      <br>
+      <button class="add"> Add Friend </button>
+    </td>
+  </div>
+
+  <div class="design">
+    <style>
+      .design {
+      padding: 20px 10px ;
+      height: 20px 30px;
+      width: 150px ;
+      box-shadow: 0 0 6px rgb(0, 0, 0, 0.5);
+      }
+      .add {
+        background-color: rgb(0, 12, 121);
+        color: white;
+        border: none;
+        padding: 10px 25px;
+      }
+      .friends {
+        font-size: small;
+        color: rgb(54, 52, 52);
+      }
+    </style>
+    <img style="vertical-align: middle;" src="2.jpg" width="150px">
+    <font face="arial">    <td>
+      <br> <br>
+    </td>
+    <span> <b>Basudara</b> </span>
+    <td> 
+      <br> 
+    </td>
+    <span class="friends"> 3 mutual friends </span>
+    <br>
+    <td>
+    </font>
+
+      <br>
+      <button class="add"> Add Friend </button>
+    </td>
+  </div>
+
+  <div class="design">
+    <style>
+      .design {
+      padding: 20px 10px ;
+      height: 20px 30px;
+      width: 150px ;
+      box-shadow: 0 0 6px rgb(0, 0, 0, 0.5);
+      }
+      .add {
+        background-color: rgb(0, 12, 121);
+        color: white;
+        border: none;
+        padding: 10px 25px;
+      }
+      .friends {
+        font-size: small;
+        color: rgb(54, 52, 52);
+      }
+    </style>
+    <img style="vertical-align: middle;" src="3.jpg" width="150px">
+    <font face="arial">    <td>
+      <br> <br>
+    </td>
+    <span> <b>Brando</b> </span>
+    <td> 
+      <br> 
+    </td>
+    <span class="friends"> 4 mutual friends </span>
+    <br>
+    <td>
+    </font>
+
+      <br>
+      <button class="add"> Add Friend </button>
+    </td>
+  </div>
 </body>
 </html>
